--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,1 +1,6 @@
+@charset "utf-8";
 @import 'pirati';
+@import 'layouts/_kandidatka';
+@import 'layouts/_program';
+@import 'overide/_content';
+@import 'pages/_home';
