--- a/_includes/homepage/banner.html
+++ b/_includes/homepage/banner.html
@@ -1,8 +1,78 @@
-<div class="row c-hp-banner">
+<div class="row">
   <div class="small-12 columns">
-    <a href="{{ include.link }}" title="{{ include.title }}" class="c-hp-banner__link">
-      <img src="{{ include.default }}" alt="{{ include.title }}"  class="c-hp-banner__media">
-    </a>
+
+  <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="/assets/swiper/swiper-bundle.min.css">
+
+  <!-- Demo styles -->
+  <style>
+    .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+
+    .swiper-slide a { margin: !important; padding:0 !important; }
+    .swiper-slide a img { margin:0 !important; padding:0 !important; }
+  </style>
+
+
+<body>
+  <!-- Swiper -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek1.jpg" width="100%" /></a>
+      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek.jpg" width="100%" /></a>
+      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek.jpg" width="100%" /></a>
+      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek4.jpg" width="100%" /></a>
+    </div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <!-- Swiper JS -->
+  <script src="/assets/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      cssMode: true,
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      pagination: {
+        el: '.swiper-pagination'
+      },
+      mousewheel: true,
+      keyboard: true,
+    });
+  </script>
+
   </div>
 </div>
 
