--- a/_includes/homepage/banner.html
+++ b/_includes/homepage/banner.html
@@ -42,10 +42,10 @@
   <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek1.jpg" width="100%" /></a>
-      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek.jpg" width="100%" /></a>
-      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek.jpg" width="100%" /></a>
-      <a href="/aktuality/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek4.jpg" width="100%" /></a>
+      <a href="https://www.pirati.cz/tiskove-zpravy/pirati-prosadili-jedenact-usneseni-k-reseni-koronakrize.html" class="swiper-slide"><img src="/assets/img/banners/obrazek1.jpg" width="100%" alt="Piráti spolu s opozicí prosadili jedenáct usnesení k řešení pandemické krize. O dalších návrzích se bude jednat odpoledne" /></a>
+      <a href="https://www.pirati.cz/tiskove-zpravy/ani-po-urgencich-vlada-nema-plan.html" class="swiper-slide"><img src="/assets/img/banners/obrazek2.jpg" width="100%" alt="Vláda dál mlží ohledně koronaviru. Ani po urgencích Pirátů nepředstavila plán prevence ani nevysvětlila plošná opatření" /></a>
+      <a href="https://www.pirati.cz/tiskove-zpravy/pirati-brifink-pred-schuzi.html" class="swiper-slide"><img src="/assets/img/banners/obrazek3.jpg" width="100%" alt="Piráti chtějí znát opatření vlády proti druhé vlně koronaviru, zrušení účelové výjimky pro svěřenské fondy a odmítají nehospodárné výdaje formou „rouškovného“" /></a>
+      <a href="https://www.pirati.cz/tiskove-zpravy/ochranu-lidi-pred-koronavirem-vlada-nezvladla.html" class="swiper-slide"><img src="/assets/img/banners/obrazek4.jpg" width="100%" alt="Vláda zcela selhala v ochraně lidí i firem před koronavirem. Piráti představili nutná opatření proti přetížení zdravotnictví a zmrazení celé ekonomiky" /></a>
     </div>
     <!-- Add Arrows -->
     <div class="swiper-button-next"></div>
